--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
     <title>The code review form</title>
 
@@ -21,6 +22,8 @@
 </header>
 
 <main>
+  <hr id="top">
+  <hr>
     <form method="post">
       <fieldset>
         <legend>Contact Information</legend>
@@ -52,13 +55,57 @@
           <div class="container">
             <label for="state">State:</label><br>
             <select name="state" id="state">
-                <option value="">Select State:</option>
-                <option value="newyork">New York</option>
-                <option value="texas">Texas</option>
-                <option value="nevada">Nevada</option>
+                <option value="">Choose State:</option>
+                <option value="alabama">Alabama</option>
+                <option value="alaska">Alaska</option>
                 <option value="arizona">Arizona</option>
+                <option value="arkansas">Arkansas</option>
+                <option value="california">California</option>
+                <option value="colorado">Colorado</option>
+                <option value="connecticut">Connecticut</option>
+                <option value="delaware">Delaware</option>
+                <option value="flordia">Flordia</option>
+                <option value="georgia">Georgia</option>
+                <option value="hawaii">Hawaii</option>
+                <option value="idaho">Idaho</option>
+                <option value="illinois">Illinois</option>
+                <option value="indiana">Indiana</option>
+                <option value="iowa">Iowa</option>
+                <option value="kansas">Kansas</option>
+                <option value="kentucky">Kentucky</option>
+                <option value="louisiana">Louisiana</option>
                 <option value="maine">Maine</option>
+                <option value="maryland">Maryland</option>
+                <option value="massachusetts">Massachusetts</option>
+                <option value="michigan">Michigan</option>
+                <option value="minnesota">Minnesota</option>
+                <option value="mississippi">Mississippi</option>
+                <option value="missouri">Missouri</option>
+                <option value="montana">Montana</option>
+                <option value="nebraska">Nebraska</option>
+                <option value="nevada">Nevada</option>
+                <option value="newhampshire">New Hampshire</option>
+                <option value="newjersey">New Jersey</option>
+                <option value="newmexico">New Mexico</option>
+                <option value="newyork">New York</option>
+                <option value="northcarolina">North Carolina</option>
+                <option value="northdakota">North Dakota</option>
                 <option value="ohio">Ohio</option>
+                <option value="oklahoma">Oklahoma</option>
+                <option value="oregon">Oregon</option>
+                <option value="pennsylvania">Pennsylvania</option>
+                <option value="rhodeisland">Rhode Island</option>
+                <option value="southcarolina">South Carolina</option>
+                <option value="southdakota">South Dakota</option>
+                <option value="tennessee">Tennessee</option>
+                <option value="texas">Texas</option>
+                <option value="utah">Utah</option>
+                <option value="vermont">Vermont</option>
+                <option value="virginia">Virginia</option>
+                <option value="washington">Washington</option>
+                <option value="westvirginia">West Virginia</option>
+                <option value="wisconsin">Wisconsin</option>
+                <option value="wyoming">Wyoming</option>
             </select>
           </div>
 
@@ -81,12 +128,13 @@
             </div>
 
             <div class="newsletter">
+              <hr>
               <label>Newsletter format</label><br>
                 <input type="radio" id="html" name="format" value="html">
                 <label for="html">HTML</label><br>
                 <input type="radio" id="plain" name="format" value="plain">
                 <label for="plain">Plain text</label><br>
-                <textarea id="other" name="other"></textarea>
+                <textarea id="other" name="other"></textarea><br>
                 <input type="button" value="Sign up">
             </div>
 
