--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <option value="colorado">Colorado</option>
                 <option value="connecticut">Connecticut</option>
                 <option value="delaware">Delaware</option>
-                <option value="flordia">Flordia</option>
+                <option value="florida">Florida</option>
                 <option value="georgia">Georgia</option>
                 <option value="hawaii">Hawaii</option>
                 <option value="idaho">Idaho</option>
@@ -134,6 +134,7 @@
                 <label for="html">HTML</label><br>
                 <input type="radio" id="plain" name="format" value="plain">
                 <label for="plain">Plain text</label><br>
+                <label for="other">Other topcs you would like to hear about</label><br>
                 <textarea id="other" name="other"></textarea><br>
                 <input type="button" value="Sign up">
             </div>
