--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <form method="post">
       <fieldset>
         <legend>Contact Information</legend>
-        
+
           <div class="container">
               <label for="name">Full Name:</label><br>
-              <input required type="text" id="name" name="name" placeholder="Required"><br>
+              <input type="text" id="name" name="name" placeholder="Required" required><br>
           </div>
 
           <div class="container">
               <label for="email">Email Address:</label><br>
-              <input required type="text" id="email" name="email" placeholder="Required"><br>
+              <input type="text" id="email" name="email" placeholder="Required" required><br>
           </div>
 
           <div class="container">
@@ -45,17 +45,17 @@
 
           <div class="container">
               <label for="address">Street Address:</label><br>
-              <input required type="text" id="address" name="streetaddress" placeholder="Required"><br>
+              <input type="text" id="address" name="streetaddress" placeholder="Required" required><br>
           </div>
 
           <div class="container">
               <label for="city">City:</label><br>
-              <input required type="text" id="city" name="city" placeholder="Required"><br>
+              <input type="text" id="city" name="city" placeholder="Required" required><br>
           </div>
 
           <div class="container">
             <label for="state">State:</label><br>
-            <select required name="state" id="state">
+            <select name="state" id="state" required>
                 <option value="">Choose State:</option>
                 <option value="alabama">Alabama</option>
                 <option value="alaska">Alaska</option>
@@ -112,7 +112,7 @@
 
           <div class="container">
               <label for="zip">Zip Code:</label><br>
-              <input type="text" id="zip" name="zipcode" placeholder="Required"><br>
+              <input type="text" id="zip" name="zipcode" placeholder="Required" required><br>
           </div>
         </fieldset>
 
@@ -137,7 +137,7 @@
                 <label for="plain">Plain text</label><br>
                 <label for="other">Other topcs you would like to hear about</label><br>
                 <textarea id="other" name="other"></textarea><br>
-                <input type="button" value="Sign up">
+                <input type="submit" value="Sign up">
             </div>
 
       </fieldset>
