--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
           <div class="container">
               <label for="email">Email Address:</label><br>
-              <input type="text" id="email" name="email" placeholder="Required" required><br>
+              <input type="email" id="email" name="email" placeholder="Required" required><br>
           </div>
 
           <div class="container">
               <label for="phone">Phone Number:</label><br>
-              <input type="text" id="phone" name="phone" placeholder="Optional"><br>
+              <input type="tel" id="phone" name="phone" placeholder="Optional"><br>
           </div>
 
           <div class="container">
